--- a/www/webresources/css/doko.css
+++ b/www/webresources/css/doko.css
@@ -83,3 +83,26 @@ code {
     color: #333;
     background-color: #FBFBFB;
 }
+
+span.title-img {
+    padding-left: 48px;
+}
+
+.key-points h2 {
+}
+
+.key-points h2.persistence span.title-img {
+    background: url("../img/icon-dbsearch-small-bw.png") center left no-repeat;
+}
+
+.key-points h2.users span.title-img {
+    background: url("../img/icon-people-small-bw.png") center left no-repeat;
+}
+
+.key-points h2.renderer span.title-img {
+    background: url("../img/icon-form-small-bw.png") center left no-repeat;
+}
+
+.key-points h2.json span.title-img {
+    background: url("../img/icon-jsonhttp-small-bw.png") center left no-repeat;
+}
