--- a/www2/css/styles.css
+++ b/www2/css/styles.css
@@ -5,13 +5,14 @@ body {
     color:white;
     font-family: 'Open Sans', sans-serif;
     font-size: 1.8em;
+    background-color: #51BFBE;
 }
 
 .jumbotron {
+    background-color: #51BFBE;
     margin: 0;
     padding-top: 30px;
     padding-bottom: 20px;
-    background-color: #51BFBE;
 }
 
 .jumbotron h1, .col h2, .content h2, .content h3 {
@@ -31,29 +32,74 @@ body {
 }
 
 .cols .col {
-    padding-top: 30px;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
+.cols .col.findr h2 {
+    font-family: 'Faster One', cursive;
+    font-size: 2.5em;
 }
 
 .woko {
     background-color: #6982A2;
-    padding-bottom: 20px;
 }
 
 .findr {
     background-color: #DCD56C;
-    padding-bottom: 20px;
 }
 
 .stuff {
     background-color: #FC694D;
-    padding-bottom: 20px;
 }
 
 h2 {
     margin: 0;
 }
 
+.more {
+    font-family: 'Montserrat Alternates', sans-serif;
+    margin-top: 40px;
+    text-align: center;
+}
+
+.more a {
+    color: white;
+    text-decoration: none;
+    font-size: 2.0em;
+    border: 3px solid white;
+    border-radius: 6px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 #sectionWoko, #sectionFindr, #sectionStuff {
     padding-bottom: 64px;
     padding-top: 32px;
+}
+
+#sectionFindr h2 {
+    font-family: 'Faster One', cursive;
+    font-size: 3.0em;
+    padding-bottom: 24px;
+    padding-left: 15px;
+}
+
+
+#sectionStuff h2 {
+    font-family: 'Freckle Face', cursive;
+    font-size: 3.0em;
+    padding-bottom: 24px;
+    padding-left: 15px;
+}
+
+#sectionFindr img {
+    padding-bottom: 24px;
+}
+
+#sectionFindr pre {
+    background-color: black;
+    color: #f5f5f5;
 }
